--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Random Jokes</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <h1>😂 Random Joke Generator</h1>
+    <button id="getJoke">Get a Joke</button>
+    <p id="jokeText">Click the button to laugh!</p>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
