--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>😂 Random Joke Generator</h1>
     <button id="getJoke">Get a Joke</button>
     <p id="jokeText">Click the button to laugh!</p>
-
+    <div id="loader" class="hidden"></div>
     <script src="script.js"></script>
 </body>
 
