--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 </head>
 
 <body>
-    <h1>😂 Random Joke Generator</h1>
-    <button id="getJoke">Get a Joke</button>
-    <p id="jokeText">Click the button to laugh!</p>
-    <div id="loader" class="hidden"></div>
+    <div class="container">
+        <div class="left">
+            <h1>😂 Random Joke Generator</h1>
+            <button id="getJoke">Get a Joke</button>
+            <p id="jokeText">Click the button to laugh!</p>
+            <div id="loader" class="hidden"></div>
+        </div>
+        <div class="right">
+            <img src="laughImage.svg" alt="Laughing" class="laugh-img" />
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
+
 
 </html>
