--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Random Jokes</title>
+    <title>Joke Generator</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -12,10 +12,11 @@
     <section class="joke_section">
         <div class="container">
             <div class="left">
-                <span class="small-title">Welcome To</span>
-                <h1 class="main-title">Random Joke Generator</h1>
-                <p id="jokeText">Click the button to laugh!</p>
+                <span class="small-title">Welcome to</span>
+                <h1 class="main-title">😂 Joke Generator</h1>
+                <p class="subtext">Click the button below to lighten your mood with a random joke!</p>
                 <button id="getJoke">Get a Joke</button>
+                <p id="jokeText" class="joke-display">Your joke will appear here 🤓</p>
             </div>
             <div class="right">
                 <img src="laughImage.svg" alt="Laughing" class="laugh-img" />
