--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <section class="joke_section">
         <div class="container">
             <div class="left">
-                <span class="small-title">Welcome to</span>
-                <h1 class="main-title">😂 Joke Generator</h1>
-                <p class="subtext">Click the button below to lighten your mood with a random joke!</p>
+                <span class="small-title">You are at..</span>
+                <h1 class="main-title">🤖 Running Humor Protocol v1.0.0</h1>
+                <p class="subtext">Meetings suck. Coffee’s cold. Susan sent another all-caps email.
+                    You deserve this joke.</p>
                 <div style="display: flex; flex-direction: column; align-items: flex-start;">
                     <button id="getJoke">Get a Joke</button>
                     <div id="loader" class="spinner hidden"></div>
