--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <button id="getJoke">Get a Joke</button>
                     <div id="loader" class="spinner hidden"></div>
                 </div>
-                <p id="jokeText" class="joke-display centered visible">Your joke will appear here 🤓</p>
+                <p id="jokeText" class="joke-display visible">Your joke will appear here 🤓</p>
             </div>
             <div class="right">
                 <img src="laughImage.svg" alt="Laughing" class="laugh-img" />
