--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <button id="getJoke">Get a Joke</button>
                 </div>
                 <p id="jokeText" class="joke-display visible">Your joke will appear here 🤓</p>
+                <div id="loader" class="hidden"></div>
             </div>
             <div class="right">
                 <img src="laughImage.svg" alt="Laughing" class="laugh-img" />
