--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="joke_section">
         <div class="container">
             <div class="left">
-                <span class="small-title">You are at...1</span>
+                <span class="small-title">You are at...</span>
                 <h1 class="main-title">🤖 Running Humor Protocol v1.0.0</h1>
                 <p class="subtext">Meetings suck. Coffee’s cold. Susan sent another all-caps email.
                     You deserve this joke.</p>
