--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
                 <div style="display: flex; flex-direction: column; align-items: flex-start;">
                     <button id="getJoke">Get a Joke</button>
                 </div>
-                <p id="jokeText" class="joke-display visible">Your joke will appear here 🤓</p>
-                <div id="loader" class="hidden"></div>
+                <p id="jokeText">
+                    <span id="jokeContent">Your joke here</span>
+                    <span id="loader" class="hidden"></span>
+                </p>
             </div>
             <div class="right">
                 <img src="laughImage.svg" alt="Laughing" class="laugh-img" />
