--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <button id="getJoke">Get a Joke</button>
                 </div>
                 <p id="jokeText">
-                    <span id="jokeContent">Your joke here</span>
+                    <span id="jokeContent">Your joke will appear here 🤓</span>
                     <span id="loader" class="hidden"></span>
                 </p>
             </div>
